--- a/src/main/webapp/pages/admin/admin-edit.html
+++ b/src/main/webapp/pages/admin/admin-edit.html
@@ -29,7 +29,7 @@
               </label>
               <div class="layui-input-inline">
                   <input type="text" id="username" name="username" required="" lay-verify="required"
-                  autocomplete="off" class="layui-input">
+                  autocomplete="off" value="admin" class="layui-input">
               </div>
               <div class="layui-form-mid layui-word-aux">
                   <span class="x-red">*</span>将会成为您唯一的登入名
@@ -40,7 +40,7 @@
                   <span class="x-red">*</span>手机
               </label>
               <div class="layui-input-inline">
-                  <input type="text" id="phone" name="phone" required="" lay-verify="phone"
+                  <input type="text" value="18925139194" id="phone" name="phone" required="" lay-verify="phone"
                   autocomplete="off" class="layui-input">
               </div>
               <div class="layui-form-mid layui-word-aux">
@@ -52,7 +52,7 @@
                   <span class="x-red">*</span>邮箱
               </label>
               <div class="layui-input-inline">
-                  <input type="text" id="L_email" name="email" required="" lay-verify="email"
+                  <input type="text" value="113664000@qq.com" id="L_email" name="email" required="" lay-verify="email"
                   autocomplete="off" class="layui-input">
               </div>
               <div class="layui-form-mid layui-word-aux">
@@ -64,7 +64,7 @@
               <div class="layui-input-block">
                 <input type="checkbox" name="like1[write]" lay-skin="primary" title="超级管理员" checked="">
                 <input type="checkbox" name="like1[read]" lay-skin="primary" title="编辑人员">
-                <input type="checkbox" name="like1[write]" lay-skin="primary" title="宣传人员" checked="">
+                <input type="checkbox" name="like1[write]" lay-skin="primary" title="宣传人员" >
               </div>
           </div>
           <div class="layui-form-item">
