--- a/src/main/resources/static/iframe/member-add.html
+++ b/src/main/resources/static/iframe/member-add.html
@@ -1,5 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
 <!DOCTYPE html>
 <html>
   
@@ -23,7 +21,7 @@
   </head>
   
   <body>
-    <div class="x-body">
+    <div class="x-body layui-anim layui-anim-up">
         <form class="layui-form">
           <div class="layui-form-item">
               <label for="L_email" class="layui-form-label">
@@ -31,7 +29,7 @@
               </label>
               <div class="layui-input-inline">
                   <input type="text" id="L_email" name="email" required="" lay-verify="email"
-                  autocomplete="off" class="layui-input" value="${member.email}">
+                  autocomplete="off" class="layui-input">
               </div>
               <div class="layui-form-mid layui-word-aux">
                   <span class="x-red">*</span>将会成为您唯一的登入名
@@ -43,7 +41,7 @@
               </label>
               <div class="layui-input-inline">
                   <input type="text" id="L_username" name="name" required="" lay-verify="nikename"
-                  autocomplete="off" class="layui-input" value="${member.name}">
+                  autocomplete="off" class="layui-input">
               </div>
           </div>
           <div class="layui-form-item">
@@ -67,8 +65,6 @@
                   autocomplete="off" class="layui-input">
               </div>
           </div>
-            <input type="hidden"  name="id" required="" lay-verify="id"
-                   autocomplete="off" class="layui-input" value="${member.id}">
           <div class="layui-form-item">
               <label for="L_repass" class="layui-form-label">
               </label>
@@ -79,48 +75,48 @@
       </form>
     </div>
     <script>
-      layui.use(['form','layer'], function(){
-          $ = layui.jquery;
-        var form = layui.form
-        ,layer = layui.layer;
-      
-        //自定义验证规则
-        form.verify({
-          nikename: function(value){
-            if(value.length < 2){
-              return '昵称至少得2个字符啊';
-            }
-          }
-          ,pass: [/(.+){6,12}$/, '密码必须6到12位']
-          ,repass: function(value){
-              if($('#L_pass').val()!=$('#L_repass').val()){
-                  return '两次密码不一致';
+        layui.use(['form','layer'], function(){
+            $ = layui.jquery;
+          var form = layui.form
+          ,layer = layui.layer;
+        
+          //自定义验证规则
+          form.verify({
+            nikename: function(value){
+              if(value.length < 2){
+                return '昵称至少得2个字符啊';
               }
-          }
-        });
+            }
+            ,pass: [/(.+){6,12}$/, '密码必须6到12位']
+            ,repass: function(value){
+                if($('#L_pass').val()!=$('#L_repass').val()){
+                    return '两次密码不一致';
+                }
+            }
+          });
 
           //监听提交
           form.on('submit(add)', function(data){
-              console.log(data.field);
-              //发异步，把数据提交给php
-              $.post("/member/memberAdd",data.field,function (res) {
-                  if (res.code=='OK') {
-                      layer.alert("修改成功", {icon: 6},function () {
-                          // 获得frame索引
-                          var index = parent.layer.getFrameIndex(window.name);
-                          //刷新父页面
-                          parent.window.refresh();
-                          //关闭当前frame
-                          parent.layer.close(index);
-                      });
-                  }else {
-                      layer.alert("修改失败", {icon: 5})
-                  }
-              },"json");
-              return false;
+            console.log(data.field);
+            //发异步，把数据提交给php
+            $.post("/member/memberAdd",data.field,function (res) {
+                if (res.code=='OK') {
+                    layer.alert("增加成功", {icon: 6},function () {
+                        // 获得frame索引
+                        var index = parent.layer.getFrameIndex(window.name);
+                        //刷新父页面
+                        parent.window.refresh();
+                        //关闭当前frame
+                        parent.layer.close(index);
+                    });
+                }else {
+                    layer.alert("增加失败", {icon: 5})
+                }
+            },"json");
+            return false;
           });
-      });
-  </script>
+        });
+    </script>
   </body>
 
 </html>
